k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-platform-svc
  namespace: devops-platform
  labels:
    app: devops-platform-app

spec:
  type: LoadBalancer

  selector:
    app: devops-platform-app

  ports:
    - name: http
      port: 80
      targetPort: 3000
